# on-policy-crm

./: .gitignore  README.md  pyproject.toml
src/: demo.py
src/agents/: __init__.py  cql.py  ql.py
src/core/: __init__.py  crossproduct.py  ground.py  label.py  machine.py
